[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/Balls/Ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Game/Balls/OrangeBall.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Game/Light/light.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/HitBall.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/Score.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 34.0756

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.476807, -0.953602 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.132797, 0.132797 )
texture = ExtResource( 3 )
color = Color( 1, 0.54902, 0.152941, 1 )
range_z_min = -500
range_z_max = 500

[node name="PadCollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="RestartTimer" to="." method="randomDirection"]
